# caniot-rust-controller

./: .env  .gitignore  Cargo.toml  Makefile  build.rs  caniot-controller.toml  caniot-rctrl_0.1.0.bb  readme.md
examples/: blc.rs  dt.rs  dt2.rs  dt3.rs  localtime.rs  poc.rs  temperature.rs  thiserror.rs
migrations/: 20240529200319_init.up.sql
proto/: common.proto  legacy.proto  model.proto  ng.proto  ng_alarms.proto  ng_can_iface.proto  ng_controller.proto  ng_copro.proto  ng_devices.proto  ng_emulation.proto  ng_garage.proto  ng_heaters.proto  ng_internal.proto
proto/grpc-web/: .gitignore  Makefile  package-lock.json  package.json  proto-gen-grpc-web.sh  readme.md
scripts/: build-poky.sh  build.sh  caniot-controller.toml  caniot.rest  grpcurl.sh  kill-caniot-controller.sh  model.proto
src/: can.rs  caniot.rs  config.rs  context.rs  controller.rs  init.rs  lib.rs  logger.rs  main.rs  server.rs  settings.rs  shared.rs
src/bus/: can.rs  emu.rs  iface.rs  mod.rs
src/caniot/: attributes.rs  attributes_test.rs  board.rs  datatypes.rs  datatypes_test.rs  decenc.rs  did.rs  error.rs  helper.rs  helper_test.rs  mdev.rs  mod.rs  payloads.rs  payloads_test.rs  protocol.rs  sys_control.rs  sys_control_test.rs  tests.rs  types.rs
src/caniot/classes/: class0.rs  class0_test.rs  class1.rs  class1_test.rs  command.rs  mod.rs  telemetry.rs  traits.rs  utils.rs
src/caniot/devices/: garage.rs  heating_controller.rs
src/caniot/emu/: behavior.rs  device.rs  helpers.rs  helpers_test.rs  mod.rs  pools.rs
src/caniot/emu/nodes/: demo.rs  garage.rs  heaters.rs  mod.rs  outdoor_alarm.rs
src/caniot/protocol/: device_id.rs  frame.rs  helper.rs  helper_test.rs  mod.rs  protocol_test.rs  request.rs  response.rs  response_test.rs  types.rs
src/controller/: actions.rs  actor.rs  alerts.rs  config.rs  controller.rs  device.rs  events.rs  handle.rs  init.rs  mod.rs  traits.rs
src/controller/caniot_controller/: alerts.rs  api_message.rs  auto_attach.rs  caniot_devices_controller.rs  caniot_message.rs  device_filter.rs  mod.rs  pending_action.rs  pending_query.rs  stats.rs
src/controller/caniot_device/: actions.rs  context.rs  device.rs  device_infos.rs  jobs.rs  mod.rs  standard_measures.rs  stats.rs  traits.rs  types.rs
src/controller/caniot_nodes_controllers/: demo.rs  garage.rs  garage_test.rs
src/controller/caniot_nodes_controllers/alarms/: actions.rs  config.rs  jobs.rs  outdoor.rs
src/controller/caniot_nodes_controllers/heaters/: heaters.rs
src/controller/controller/: api.rs  attach.rs  auto_attach.rs  can_tunnel.rs  config.rs  controller.rs  mod.rs  pending_action.rs  pending_query.rs  stats.rs  traits.rs
src/controller/copro_controller/: api_message.rs  config.rs  controller.rs  device.rs  devices.rs  mod.rs  prometheus.rs  xiaomi.rs
src/controller/core/: can_tunnel.rs  controller.rs  device_filtering.rs  init.rs  mod.rs  stats.rs
src/controller/device/: actions.rs  alert.rs  context.rs  device.rs  device_infos.rs  jobs.rs  legacy_device.rs  mod.rs  stats.rs  traits.rs  types.rs  verdict.rs
src/controller/devices/: garage.rs  heating.rs  mod.rs
src/controller/nodes/: demo.rs  garage.rs  garage_test.rs  heaters.rs  mod.rs  outdoor_alarm.rs  unmanaged.rs
src/controller/nodes_controllers/: demo.rs  garage.rs  garage_test.rs  heaters.rs  mod.rs
src/controller/nodes_controllers/alarms/: actions.rs  mod.rs  outdoor.rs  outdoor_test.rs  types.rs
src/controller/nodes_controllers/heaters/: heaters.rs  mod.rs  types.rs
src/copro/: server.rs
src/coprocessor/: config.rs  coprocessor.rs  mod.rs
src/database/: db.rs  mod.rs  setting.rs  settings.rs  settings_store.rs  settings_store_test.rs  settings_test.rs  settings_types.rs
src/devices/: garage.rs  mod.rs
src/grpcserver/: helper.rs  init.rs  mod.rs
src/grpcserver/legacy/: legacy.rs  mod.rs
src/grpcserver/ng/: alarms_service.rs  can_iface_service.rs  controller_service.rs  copro_service.rs  devices_service.rs  emu_service.rs  garage_service.rs  heaters_service.rs  helpers.rs  internal_service.rs  mod.rs  ng.rs
src/ha/: attic.rs  ha.rs  mod.rs
src/internal/: firmware.rs  mod.rs  settings.rs  software.rs
src/logger/: logger.rs
src/server/: rest.rs  server.rs
src/utils/: emu.rs  expirable.rs  expirable_queue.rs  expirable_test.rs  math.rs  mod.rs  monitorable.rs  monitorable_measure.rs  monitorable_state.rs  prometheus.rs  scheduling.rs  scheduling_test.rs  time_range.rs
src/webserver/: init.rs  mod.rs  prometheus_exporter.rs  rest.rs  server.rs  web.rs
static/: index.html  style.css
templates/tera/: index.html.tera
ui/: .env  Makefile  package-lock.json  package.json  proto-gen-grpc-web.sh  vite.config.ts
ui/src/: App.css  App.tsx  constants.ts
ui/src/components/: AlarmDiagWidget.tsx  BleDeviceMetricsWidget.tsx  CaniotFramesTable.tsx  CaniotQueryForm.tsx  ControllerStatsCard.tsx  CounterGauge.tsx  DeviceAlert.tsx  DeviceDetailsCard.tsx  DeviceMetricsWidget.tsx  DeviceStatusCard.tsx  DeviceWidgetCard.tsx  DevicesArray.tsx  DevicesTable.tsx  FirmwareInfosCard.tsx  GarageDoorStatus.tsx  GarageDoorsStatus.tsx  GarageGateStatus.tsx  Gauges.tsx  HeaterModeSelector.tsx  HeatersSchedulingCard.tsx  Hello.tsx  HelloComponent.tsx  LastSeenBadge.tsx  LastSeenSecondsCounter.tsx  ListGridItem.tsx  ListLabelledItem.tsx  LoadableCard.tsx  Menu.tsx  SoftwareInfosCard.tsx  TemperatureGauges.tsx  TwoStatesSelector.tsx
ui/src/components/responsive/: ColR.tsx  MediaMobile.tsx
ui/src/store/: AlarmsStore.tsx  CoproStore.tsx  DevicesStore.tsx  EmulationStore.tsx  GarageStore.tsx  HeatersStore.tsx  InternalStore.tsx  SessionStore.tsx  helpers.ts
ui/src/view/: Alarms.tsx  AlarmsView.tsx  BleDevicesView.tsx  Debug.tsx  DemoView.tsx  DevicesView.tsx  EmulationView.tsx  GarageDoors.tsx  GarageDoorsView.tsx  Heaters.tsx  HeatersView.tsx  HelloCard.tsx  Home.tsx  HomeView.tsx  NoMatch.tsx  Settings.tsx  SettingsView.tsx
