[package]
name = "caniot-rust-controller"
version = "0.1.0"
edition = "2021"
description = "CANIOT Rust Controller"
homepage = "https://github.com/lucasdietrich/caniot-rust-controller.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["emu", "grpc"]

grpc = []

# feature for emulated can interface and devices
emu = []

[dependencies]
tokio = { version = "1", features = ["net"]}
async-std = "1.12"
async-trait = "0.1.74"

rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"

futures = "0.3"
futures-util = "0.3"

socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", rev = "c3004f0d7c600cd3964cd8655fd26f670d7c87e7", features = ["tokio", "async-std"]}
embedded-can = "0.4"

log = "0.4.20"
env_logger = "0.11.3"

num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0.48"

tonic = { version = "0.11.0" }
prost = "0.12"
prost-types = "0.12.4"


itertools = "0.12.1"

tera = "1.0"

rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }

rand = "0.8"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
debug = false
strip = false # "debuginfo"
debug-assertions = false
overflow-checks = false
panic = 'abort' # might be 'abort'
incremental = false
rpath = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = true
strip = false
debug-assertions = true
overflow-checks = true
panic = 'abort'
incremental = true
rpath = false