[package]
name = "caniot-controller"
version = "0.2.2"
edition = "2021"
description = "CANIOT Rust Controller"
homepage = "https://github.com/lucasdietrich/caniot-rust-controller.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["db-sqlite", "ble-copro"]

# feature for emulated can interface and devices
can-tunnel = []
experimental = []
emu = ["emu-delay"]
grpc-can-iface-server = ["can-tunnel", "dep:tokio-stream", "dep:async-stream"]
grpc-can-iface-client = ["can-tunnel", "dep:async-stream"]

db-postgres = ["sqlx/postgres"]
db-sqlite = ["sqlx/sqlite"]

ble-copro = ["dep:ble-copro-stream-server"]
emu-delay = []

[dependencies]
# Asynchronous runtime and features
tokio = { version = "1.38.0", features = ["net"] }
tokio-stream = { version = "0.1.15", optional = true }
async-std = "1.12"
async-trait = "0.1"
async-stream = { version = "0.3.5", optional = true }
futures = "0.3"
futures-util = "0.3"

# CAN interface
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", rev = "c3004f0d7c600cd3964cd8655fd26f670d7c87e7", features = [
    "tokio",
    "async-std",
] }
embedded-can = "0.4"

# grpc
tonic = "0.11.0"
tonic-web = "0.11"
prost = "0.12"
prost-types = "0.12"

# database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros"] }

# Webserver
rocket = { version = "0.5.1", features = ["json"] }

# cli
clap = { version = "4.5.8", features = ["derive"] }

# serialization
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8"

# logging
env_logger = "0.10.2"
log = "0.4.22"

# utils
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0"
itertools = "0.13"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
as-any = "0.3"
dyn-clone = "1.0.17"
# sorted-vec = "0.8.3"

# BLE can
[dependencies.ble-copro-stream-server]
git = "https://github.com/lucasdietrich/zephyr-linux-ble-copro.git"
rev = "abc4ea18db50b30c05ff697bf583ca2fb4ccaa13"
# path = "/home/lucas/zephyrproject/zephyr-hypirl-ble-copro/ble-copro-stream-server-rs"
optional = true
features = ["chrono"]

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
strip = false           # "debuginfo"
debug-assertions = true
overflow-checks = true
panic = 'abort'
incremental = true
rpath = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = true
strip = false
debug-assertions = true
overflow-checks = true
panic = 'abort'
incremental = true
rpath = false
